--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -8,6 +8,7 @@
   right: 0;
   padding-left: 2em;
   padding-right: 2em;
+  z-index:1000;
 }
 
 #nav-bar .logo {
